word wrap h5 fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h6 {
 h5 {
   font-family: 'Poppins', sans-serif;
   font-size: 12px;
+  word-wrap: break-word;
 }
 
 @media (min-width:320px) {
